[refactor] chat: batch 이벤트 수집에 toList 사용